--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,17 +1,23 @@
+# config/packages/security.yaml
 security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        sbire_provider:
+            entity:
+                class: App\Entity\Sbire
+                property: email
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: sbire_provider
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
