--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,8 +1,6 @@
 # This file is the entry point to configure your own services.
 # Files in the packages/ subdirectory configure your dependencies.
 
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     env(MERCURE_PUBLIC_URL): ''
 
@@ -11,17 +9,19 @@ twig:
         MERCURE_PUBLIC_URL: '%env(MERCURE_PUBLIC_URL)%'
 
 services:
-    # default configuration for services in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        autowire: true
+        autoconfigure: true
+        bind:
+            $publisherJwt: '@=service("App\\Service\\MercureJwtFactory").createPublisherJwt()'
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
+    App\Service\MercureJwtFactory:
+        arguments:
+            $publisherJwtKey: '%env(MERCURE_PUBLISHER_JWT_KEY)%'
+
     App\:
         resource: '../src/'
 
-    # Explicit listener registrations for chat
     App\EventListener\ChatDoctrineListener:
         tags:
             - { name: doctrine.event_listener, event: postPersist }
@@ -29,6 +29,3 @@ services:
     App\EventListener\SendChatMercureListener:
         tags:
             - { name: kernel.event_listener, event: 'App\\Event\\ChatMessageEvent', method: onChatMessage }
-
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
