--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -1,5 +1,33 @@
-
+---
+# Development environment override
 services:
+  php:
+    build:
+      context: .
+      target: frankenphp_dev
+    volumes:
+      - ./:/app
+      - ./frankenphp/Caddyfile:/etc/frankenphp/Caddyfile:ro
+      - ./frankenphp/conf.d/20-app.dev.ini:/usr/local/etc/php/app.conf.d/20-app.dev.ini:ro
+      # If you develop on Mac or Windows you can remove the vendor/ directory
+      #  from the bind-mount for better performance by enabling the next line:
+      #- /app/vendor
+    environment:
+      FRANKENPHP_WORKER_CONFIG: watch
+      MERCURE_EXTRA_DIRECTIVES: demo
+      # See https://xdebug.org/docs/all_settings#mode
+      XDEBUG_MODE: "${XDEBUG_MODE:-off}"
+      APP_ENV: "${APP_ENV:-dev}"
+    extra_hosts:
+      # Ensure that host.docker.internal is correctly defined on Linux
+      - host.docker.internal:host-gateway
+    tty: true
+###> symfony/mercure-bundle ###
+  mercure:
+    ports:
+      - "80"
+###< symfony/mercure-bundle ###
+
 ###> doctrine/doctrine-bundle ###
   database:
     ports:
@@ -10,35 +38,9 @@ services:
   mailer:
     image: axllent/mailpit
     ports:
-      - "1025:1025"
-      - "45989:8025"
+      - "1025"
+      - "8025"
     environment:
       MP_SMTP_AUTH_ACCEPT_ANY: 1
       MP_SMTP_AUTH_ALLOW_INSECURE: 1
 ###< symfony/mailer ###
-
-###> symfony/mercure-bundle ###
-  mercure:
-    # No host ports: keep this service internal (Caddy proxy)
-    volumes:
-      # Override the container's Caddyfile with our development Caddyfile
-      - ./docker/mercure/dev.Caddyfile:/etc/caddy/Caddyfile:ro
-    environment:
-      # The dunglas/mercure image runs the actual hub on port 3000 by default
-      # We use Caddy as a front to reverse-proxy /.well-known/mercure to that hub
-      MERCURE_ADDITIONAL_OPTIONS: ''
-  # A lightweight mercure "hub" backend service that listens on port 3000.
-  # Caddy (in the `mercure` service) will reverse-proxy to this service via Docker DNS.
-  mercure-hub:
-    image: dunglas/mercure
-    restart: unless-stopped
-    environment:
-      # Disable automatic HTTPS inside the hub container so the hub serves plain HTTP on port 80
-      SERVER_NAME: ':80'
-      MERCURE_PUBLISHER_JWT_KEY: 'super_secret_mercure_key_1a2b3c4d5e6f7g8h9i0jklmnopqrstuvwxyz123456'
-      MERCURE_SUBSCRIBER_JWT_KEY: 'super_secret_mercure_key_1a2b3c4d5e6f7g8h9i0jklmnopqrstuvwxyz123456'
-      # Ensure the hub listens on port 3000 (default for this image)
-      MERCURE_ADDITIONAL_OPTIONS: ''
-    ports:
-      - "9080:80"
-###< symfony/mercure-bundle ###
