--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "firebase/php-jwt": "^6.11",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.3",
+        "runtime/frankenphp-symfony": "^0.2.0",
         "scheb/2fa-email": "^7.11",
         "symfony/asset": "7.3.*",
         "symfony/asset-mapper": "7.3.*",
@@ -103,7 +104,8 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.3.*"
+            "require": "7.3.*",
+            "docker": true
         }
     },
     "require-dev": {
