--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,36 +1,21 @@
-# config/packages/security.yaml
 security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        sbire_provider:
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
             entity:
-                class: App\Entity\Sbire
+                class: App\Entity\User
                 property: email
-
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: sbire_provider
-            custom_authenticator:
-                - App\Security\AuthAuthenticator
-                - App\Security\ChatAuthAuthenticator # Ajout du Chat pour parler 
-            logout:
-                path: app_logout
-                # where to redirect after logout
-                # target: app_any_route
-
-            remember_me:
-                secret: '%kernel.secret%'
-                lifetime: 604800
-                path: /
-                always_remember_me: true
+            provider: app_user_provider
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -43,7 +28,6 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-         - { path: ^/chat, roles: ROLE_USER } # Pour accéder au chat !
 
 when@test:
     security:
