--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,31 +1,20 @@
+# This file is the entry point to configure your own services.
+# Files in the packages/ subdirectory configure your dependencies.
+
+# Put parameters here that don't need to change on each machine where the app is deployed
+# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
 
 services:
-    # Default configuration for services in *this* file
+    # default configuration for services in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies
+        autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-        bind:
-            $publisherJwt: '@=service("App\\Service\\MercureJwtFactory").createPublisherJwt()'
 
-    # Makes classes in src/ available to be used as services
-    # This creates a service per class whose id is the fully-qualified class name
+    # makes classes in src/ available to be used as services
+    # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+        resource: '../src/'
 
-    # Controllers are imported separately to make sure services can be injected
-    App\Controller\:
-        resource: '../src/Controller'
-        tags: ['controller.service_arguments']
-
-    # Mercure JWT Factory with both keys
-    App\Service\MercureJwtFactory:
-        arguments:
-            $publisherKey: '%env(MERCURE_PUBLISHER_JWT_KEY)%'
-            $subscriberKey: '%env(MERCURE_SUBSCRIBER_JWT_KEY)%'
-
-    # Listener Chat → Mercure
-    App\EventListener\SendChatMercureListener:
-        tags:
-            - { name: kernel.event_listener, event: 'App\\Event\\ChatMessageEvent', method: onChatMessage }
+    # add more service definitions when explicit configuration is needed
+    # please note that last definitions always *replace* previous ones
