--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,7 +10,10 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
+    App\Service\MercureJwtFactory:
+        arguments:
+            $publisherKey: '%env(MERCURE_PUBLISHER_JWT_KEY)%'
+            $subscriberKey: '%env(MERCURE_SUBSCRIBER_JWT_KEY)%'
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
