--- a/.env
+++ b/.env
@@ -41,6 +41,8 @@ MERCURE_URL=https://example.com/.well-known/mercure
 MERCURE_PUBLIC_URL=https://example.com/.well-known/mercure
 # The secret used to sign the JWTs
 MERCURE_JWT_SECRET="!ChangeThisMercureHubJWTSecretKey!"
+MERCURE_PUBLISHER_JWT_KEY="%env(MERCURE_JWT_SECRET)%"
+MERCURE_SUBSCRIBER_JWT_KEY="%env(MERCURE_JWT_SECRET)%"
 ###< symfony/mercure-bundle ###
 
 ###> symfony/messenger ###
