--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,9 +19,13 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+            
 
     # Définition explicite de MercureJwtFactory avec les clés JWT
     App\Service\MercureJwtFactory:
         arguments:
             $publisherKey: '%env(MERCURE_PUBLISHER_JWT_KEY)%'
             $subscriberKey: '%env(MERCURE_SUBSCRIBER_JWT_KEY)%'
+    App\Service\ImageUploader:
+        arguments:
+            $targetDirectory: '%kernel.project_dir%/public'
