--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^3.5",
         "easycorp/easyadmin-bundle": "*",
         "firebase/php-jwt": "^6.11",
+        "imagine/imagine": "^1.5",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.3",
         "runtime/frankenphp-symfony": "^0.2.0",
