--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@
 /.symfony.local.php
 /Caddyfile.tmp
 /public/bundles
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
